  - New Config option: economy.new_expand.max_price_claim_townblock, courtesy of the-codeboy with PR #4311.
    - Default: -1.0
    - The maximum price for an additional townblock. No matter how many blocks a town has the price will not be above this. 
    - Set to -1 to deactivate this.
  - Improve delete events, courtesy of silverwolfg11 with PR #4324.
    - Adds easy access to the UUID and date of registration for the resident/town/nation being deleted.
    - Also returns the Nation object for the PreDeleteNationEvent rather than just the name, spotted by NNYaKNpGms0eUVpiSdHx on the Discord.
  - Optimize town distance checks, courtesy of silverwolfg11 with PR #4323.
  - Clean up and beautify the Towny startup logging.
  - Add Wither and WitherSkull to explosion revert settings.
    - These will be automatically added to the config and world settings.
    - Closes #4307.
  - Fix item_frames being broken by boats.
    - Closes #4093.
  - When /tw toggle revertunclaim is used, any active reverts will be stopped.
    - Removes necessity to stop the server and manually delete the towny\data\regen.txt. 
0.96.2.19:
  - Actually fix NETHER_PORTALs regenerating in explosions.
    - Closes #4305.
  - Clear EventWar hashtable/lists & fix message.
    - Closes #3816.
  - Fix AreaSelectionTools picking up already claimed TownBlocks in the initial sweeps.
  - Fix not being able to claim the last townblock in some situations.
    - Closes #4342.
  - New Config Node: global_town_settings.keep_inventory_on_death_in_own_town
    - Default: false
    - If People should keep their inventories on death in their own town.
    - Is not guaranteed to work with other keep inventory plugins!
    - Closes #3859.
  - New Config Node: global_town_settings.keep_inventory_on_death_in_allied_town
    - Default: false
    - If People should keep their inventories on death in an allied town.
    - Is not guaranteed to work with other keep inventory plugins!
    - Closes #3859.